<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bargen</string>
    <string name="open_manager">Open Clipper</string>

    <string name="enter_for_input">Press Enter to enter</string>
    <string name="use_dynamic_colors">Use Dynamic Colors</string>
    <string name="app_theme">App theme</string>
    <string name="refresh_widget">Refresh widget</string>
    <string name="sign_google">Sign in with Google</string>
    <string name="widget_settings">Widget settings</string>
    <string name="filter">Filter</string>
    <string name="scroll_to_top">to top</string>
    <string name="selected">Selected</string>

    <string name="empty_hint">Empty</string>
    <string name="settings_title">Settings</string>

    <string name="camera_required">The app needs access to the camera to scan</string>
    <string name="failed_scan">Scan failed</string>

    <string name="light_theme">Light</string>
    <string name="system_theme">System</string>
    <string name="dark_theme">Dark</string>

    <string name="copied">Copied</string>
    <string name="tutorial">How to use it?</string>

    <string name="check_all">Select all</string>
    <string name="delete">Delete</string>
    <string name="next">Next</string>
    <string name="create_from_buffer">QR from buffer</string>

    <string name="already_exist">Already exists</string>
    <string name="text_editing">Text editing</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="empty">Empty</string>
    <string name="tutor_create_title">Creating text</string>
    <string name="tutor_create_desc">Enter text or click the button to paste it from the clipboard</string>

    <string name="tutor_manage_title">Text management</string>
    <string name="tutor_manage_desc">Slide text left to bring up menu</string>

    <string name="tutor_copy_title">Copying</string>
    <string name="tutor_copy_desc">Click on the text to copy it to the clipboard</string>

    <string name="tutor_widget_title">Widget</string>
    <string name="tutor_widget_desc">Click on an element in the widget to copy it to the clipboard</string>

    <string name="scan">Scan</string>
    <string name="create">Create</string>
    <string name="apply">Apply</string>
    <string name="name">Title</string>
    <string name="description">Description</string>
    <string name="content">Content</string>
    <string name="tags">Tags</string>
    <string name="search">Search</string>
    <string name="close">Close</string>
    <string name="edit">Edit</string>
    <string name="choose">Select</string>
    <string name="by_date_asc">By date - old</string>
    <string name="by_date_desc">By date - new</string>
    <string name="by_name">By name</string>
    <string name="by_usage">By frequency of use</string>
    <string name="action_unrevertable">Effect is irreversible</string>
    <string name="tag_background">Tag color</string>
    <string name="tag_font_color">Tag text color</string>

    <string name="similar_tags">Similar tags:</string>
    <string name="tag_longtap_hint">Long tap on a tag to open a menu</string>
    <string name="show_card_after_scan">Show editing window immediately after scanning</string>
    <string name="volume_button_open_scanner">Volume button opens scanner</string>
    <string name="share">Share</string>
    <string name="saved_to">Saved into</string>

    <string name="backup_restore">Backup/restore data</string>
    <string name="restore">Restore</string>
    <string name="backup">Backup</string>
    <string name="app_will_close">App will close soon</string>
    <string name="delete_record">Delete record?</string>
    <string name="label_to_scans">Tags will be automatically assigned to the code</string>
    <string name="backup_error">Restore error</string>
    <string name="error">Error</string>
    <string name="max_bright">Maximum brightness on the code screen</string>
    <string name="swipe_for_delete">Swipe to delete</string>
    <string name="landscape_view">View barcode info</string>
    <string name="open_landscape_on_open">Show barcode in landscape on open</string>
    <string name="hide_bs_after_landscape_close">Hide card after closing landscape view</string>
    <string name="pin_automatically">Pin immediately</string>
    <string name="pin_limit_reached">Pin limit reached</string>
</resources>