<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        style="@style/TitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/search_type" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/searchToggleGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/byName"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="NAME"
            android:text="@string/by_name" />

        <Button
            android:id="@+id/byValue"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="VALUE"
            android:text="@string/by_value" />

    </com.google.android.material.button.MaterialButtonToggleGroup>


    <TextView
        style="@style/TitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_theme" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/themeToggleGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/darkTheme"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="DARK"
            android:text="@string/dark_theme" />

        <Button
            android:id="@+id/systemTheme"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="SYSTEM"
            android:text="@string/system_theme" />

        <Button
            android:id="@+id/lightTheme"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="LIGHT"
            android:text="@string/light_theme" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <Button
        android:id="@+id/close"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="16dp"
        android:text="@string/close" />
</LinearLayout>