<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="?attr/colorSurfaceContainerLow"
	android:orientation="vertical">
	<View style="@style/ViewDragStyle" />

	<TextView
		style="@style/TitleMedium"
		android:text="@string/text_editing"
		android:textAlignment="center"
		android:layout_marginTop="20dp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" />

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/editLayout"
		android:layout_width="match_parent"
		android:layout_marginTop="16dp"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/base_screen_margin"
		android:outlineSpotShadowColor="#000000">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/edit"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:imeOptions="actionDone"
			android:inputType="text" />
	</com.google.android.material.textfield.TextInputLayout>

	<LinearLayout
		android:layout_marginEnd="@dimen/base_screen_margin"
		android:paddingVertical="16dp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="end"
		android:orientation="horizontal">

		<Button
			android:id="@+id/save"
			style="@style/Widget.Material3.Button.TonalButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="12dp"
			android:text="@string/save" />

		<Button
			android:id="@+id/cancel"
			style="@style/Widget.Material3.Button.OutlinedButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/cancel" />
	</LinearLayout>

</LinearLayout>