<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:paddingHorizontal="@dimen/base_screen_margin"
	android:paddingTop="@dimen/base_top_margin">

	<com.krayapp.buffercompanion.views.RippleCard
		android:id="@+id/lightTheme"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView
			style="@style/BodyLarge"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="start|center_vertical"
			android:padding="@dimen/main_edit_text_margins"
			android:text="@string/light_theme"
			android:textColor="?attr/colorOnSurface" />

		<RadioButton
			android:id="@+id/lightRadio"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end|center_vertical"
			android:clickable="false"
			android:focusable="false" />
	</com.krayapp.buffercompanion.views.RippleCard>

	<com.krayapp.buffercompanion.views.RippleCard
		android:id="@+id/darkTheme"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="12dp">

		<TextView
			style="@style/BodyLarge"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="start|center_vertical"
			android:padding="@dimen/main_edit_text_margins"
			android:text="@string/dark_theme"
			android:textColor="?attr/colorOnSurface" />

		<RadioButton
			android:id="@+id/darkRadio"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end|center_vertical"
			android:clickable="false"
			android:focusable="false" />
	</com.krayapp.buffercompanion.views.RippleCard>

	<com.krayapp.buffercompanion.views.RippleCard
		android:id="@+id/systemTheme"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="12dp">

		<TextView
			style="@style/BodyLarge"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="start|center_vertical"
			android:padding="@dimen/main_edit_text_margins"
			android:text="@string/system_theme"
			android:textColor="?attr/colorOnSurface" />

		<RadioButton
			android:id="@+id/systemRadio"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end|center_vertical"
			android:clickable="false"
			android:focusable="false" />
	</com.krayapp.buffercompanion.views.RippleCard>
</LinearLayout>