<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:paddingHorizontal="@dimen/base_screen_margin"
	android:paddingTop="@dimen/base_top_margin">


	<FrameLayout
		android:id="@+id/signGoogle"
		style="@style/BaseActionContainer"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			style="@style/BodyLarge"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="start|center_vertical"
			android:padding="@dimen/main_edit_text_margins"
			android:text="@string/sign_google"
			android:textColor="?attr/colorOnSurface" />

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end|center_vertical"
			android:layout_marginEnd="@dimen/base_screen_margin"
			android:src="@drawable/ic_google" />
	</FrameLayout>

	<FrameLayout
		android:id="@+id/appTheme"
		android:layout_marginTop="12dp"
		style="@style/BaseActionContainer"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			style="@style/BodyLarge"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="start|center_vertical"
			android:padding="@dimen/main_edit_text_margins"
			android:text="@string/app_theme"
			android:textColor="?attr/colorOnSurface" />

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end|center_vertical"
			android:layout_marginEnd="@dimen/base_screen_margin"
			android:src="@drawable/ic_arrow" />
	</FrameLayout>

	<FrameLayout
		android:id="@+id/widgetSettings"
		android:layout_marginTop="12dp"
		style="@style/BaseActionContainer"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			style="@style/BodyLarge"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="start|center_vertical"
			android:padding="@dimen/main_edit_text_margins"
			android:text="@string/widget_settings"
			android:textColor="?attr/colorOnSurface" />

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end|center_vertical"
			android:layout_marginEnd="@dimen/base_screen_margin"
			android:src="@drawable/ic_arrow" />
	</FrameLayout>


	<FrameLayout
		android:id="@+id/refreshWidget"
		style="@style/BaseActionContainer"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="12dp"
		android:orientation="horizontal">

		<TextView
			style="@style/BodyLarge"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="start|center_vertical"
			android:padding="@dimen/main_edit_text_margins"
			android:text="@string/refresh_widget"
			android:textColor="?attr/colorOnSurface" />

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end|center_vertical"
			android:layout_marginEnd="@dimen/base_screen_margin"
			android:src="@drawable/refresh" />
	</FrameLayout>

	<FrameLayout
		style="@style/BaseActionContainer"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="12dp">

		<com.google.android.material.materialswitch.MaterialSwitch
			android:id="@+id/dynamic_colors_switch"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="@dimen/main_edit_text_margins"
			android:text="Use Dynamic Colors"
			android:textAppearance="@style/BodyLarge"
			android:textColor="?attr/colorOnSurface" />
	</FrameLayout>


</LinearLayout>